--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
-    "start": "node API_Server.js"
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
