--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,9 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
