--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,45 +1,25 @@
 {
-  "name": "cathub",
+  "name": "aire",
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-    "lint:eslint": "eslint . --fix --cache",
-    "lint": "run-s lint:*"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
-    "axios": "^1.13.2",
-    "body-parser": "^2.2.1",
-    "cors": "^2.8.5",
-    "express": "^5.2.1",
-    "fs": "^0.0.1-security",
-    "pinia": "^3.0.3",
-    "sqlite3": "^5.1.7",
-    "swiper": "^12.0.3",
-    "tailwindcss": "^4.1.18",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "pinia": "^3.0.3",
+    "axios": "^1.13.2",
+    "tailwindcss": "^4.1.18",
+    "daisyui": "^5.5.5",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "daisyui": "^5.5.5",
-    "eslint": "^9.37.0",
-    "eslint-plugin-oxlint": "~1.23.0",
-    "eslint-plugin-vue": "~10.5.0",
-    "globals": "^16.4.0",
-    "nodemon": "^3.1.11",
-    "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.23.0",
     "vite": "^7.1.11",
+    "@vitejs/plugin-vue": "^6.0.1",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
 }
