--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,17 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.22",
-    "vue-router": "^4.6.3",
-    "pinia": "^3.0.3",
     "axios": "^1.13.2",
-    "tailwindcss": "^4.1.18",
     "daisyui": "^5.5.5",
-    "swiper": "^12.0.3"
+    "pinia": "^3.0.3",
+    "swiper": "^12.0.3",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "vite": "^7.1.11",
     "@vitejs/plugin-vue": "^6.0.1",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
 }
