--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,17 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "daisyui": "^5.5.5",
     "pinia": "^3.0.3",
     "swiper": "^12.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@vitejs/plugin-vue": "^6.0.1",
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
+    "daisyui": "^5.5.14",
+    "tailwindcss": "^4.0.0",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
